--- a/PositionMove/index.html
+++ b/PositionMove/index.html
@@ -6,13 +6,56 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="MainText">까마귀</div>
     <div class="layout">
-        <img src="./crow.PNG" alt="CROW" class="crowimg">
-            
-        <div class="box">
-            <div class="text">CROW SIMULATOR</div>
+        <div>
+            <img src="./crow.PNG" alt="CROW" class="crowimg">    
             <div class="btn" onclick="fly()">FLY</div>
+        </div>
+        <div class="infobox">
+            <div class="first">
+                <div>학명</div>
+                <div>한국어</div>
+                <div>한자</div>
+                <div>일본어</div>
+                <div>중국어</div>
+                <div>영어</div>
+                <div>스페인어</div>
+                <div>계</div>
+                <div>문</div>
+                <div>강</div>
+                <div>목</div>
+                <div>과</div>
+                <div>멸종위기등급</div>
+                <div>크기</div>
+                <div>몸의 빛깔</div>
+                <div>생식</div>
+                <div>생활양식</div>
+                <div>서식장소</div>
+                <div>분포지역</div>
             </div>
+            <div class="second">
+                <div>Corvus corone orientalis</div>
+                <div>까마귀</div>
+                <div>烏</div>
+                <div>カラス(烏鴉)</div>
+                <div>乌鸦</div>
+                <div>Crow/Raven</div>
+                <div>Cuervo</div>
+                <div>동물</div>
+                <div>척삭동물</div>
+                <div>조류</div>
+                <div>참새목</div>
+                <div>까마귀과</div>
+                <div>미평가(NE : Not Evaluated, 출처 : IUCN)</div>
+                <div>몸길이 50cm, 날개길이 32∼38cm</div>
+                <div>검정색</div>
+                <div>난생(1회에 4~5개)</div>
+                <div>무리 생활</div>      
+                <div>산지 숲, 농경지, 농촌 인가 부근, 하천부지, 공원</div>  
+                <div>동아시아, 이란 북동부</div>
+            </div>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
