--- a/PositionMove/index.html
+++ b/PositionMove/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="MainText">까마귀</div>
+    <div class="MainText">사전이름</div>
     <div class="layout">
-        <div>
+        <div class="left">
+            <div class="Name">까마귀</div>
             <img src="./crow.PNG" alt="CROW" class="crowimg">    
             <div class="btn" onclick="fly()">FLY</div>
         </div>
+        <div>
+        <hr>
         <div class="infobox">
             <div class="first">
                 <div>학명</div>
@@ -33,6 +36,7 @@
                 <div>생활양식</div>
                 <div>서식장소</div>
                 <div>분포지역</div>
+                <div>+삼족오, tmi</div>
             </div>
             <div class="second">
                 <div>Corvus corone orientalis</div>
@@ -56,6 +60,7 @@
                 <div>동아시아, 이란 북동부</div>
             </div>
         </div>
+    </div>
     </div>
     <script src="./index.js"></script>
 </body>
