add dictlogo, style

--- a/PositionMove/index.html
+++ b/PositionMove/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="MainText">사전이름</div>
+    <div class="top">
+        <img src="dictlogo.png" alt="" width="100px" height="100px">
+        <div class="MainText">사전이름</div>
+    </div>
     <div class="layout">
         <div class="left">
             <div class="Name">까마귀</div>
