--- a/RoomEscape/Gangle_-master/index.html
+++ b/RoomEscape/Gangle_-master/index.html
@@ -16,7 +16,7 @@
         body {
             font-family: "Noto Sans", sans-serif;
             text-align: center;
-            background-color: rgb(0, 0, 0);
+            background-color: rgb(68, 68, 68);
             margin-top: 4% !important;
             overflow: hidden;
             padding: 0;
@@ -177,12 +177,7 @@
 <body>
     <div id="one">
         <div class="layout">
-            <div class="blinking" id="blue">G</div>
-            <div class="blinking" id="red">a</div>
-            <div class="blinking" id="yellow">n</div>
-            <div class="blinking" id="blue">g</div>
-            <div class="blinking" id="green">l</div>
-            <div class="blinking" id="red">e</div>
+            <div class="blinking" id="red">HIKIKOMORI</div>
             <div class="blinking" id="mark">&copy;</div>
         </div>
         <div class="search">
